<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".UpdateBankDetails_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:id="@+id/iv_ProfileBack_Id"
            android:src="@drawable/ic_backone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:text="@string/update_bank_details"
            android:fontFamily="@font/gilroy_bold"
            android:textColor="@color/edittextprofile"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@color/white"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/holder_name"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_minus6sdp"
            android:background="@drawable/bankdetailsshap"
            android:elevation="@dimen/_10sdp"
            android:hint="@string/enter_holder_name"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:singleLine="true"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/account_number"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_minus6sdp"
            android:background="@drawable/bankdetailsshap"
            android:elevation="@dimen/_10sdp"
            android:hint="@string/enter_your_account_number"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:singleLine="true"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="1"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/ifsc_code"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="1"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/type"
                android:textColor="@color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_minus1sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bankdetailsshap"
                android:elevation="@dimen/_10sdp"
                android:hint="@string/enter_your_ifsc_code"
                android:paddingHorizontal="@dimen/_6sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:textSize="12sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bankdetailsshap"
                android:elevation="@dimen/_10sdp"
                android:hint=" "
                android:paddingHorizontal="@dimen/_6sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:textSize="12sp" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/branch"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_minus6sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bankdetailsshap"
            android:elevation="@dimen/_10sdp"
            android:hint="@string/enter_your_bank_branch"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:singleLine="true"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_6sdp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/btn_Submit_Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:background="@drawable/taxtshap"
                    android:backgroundTint="@color/EditProfileButtonColor"
                    android:elevation="@dimen/_10sdp"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>