<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".BankDetails_Activity">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">


            <ImageView
                android:id="@+id/iv_back_Id"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_4sdp"
                android:src="@drawable/ic_backone" />

            <TextView
                android:id="@+id/iv_Profile_Id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_toRightOf="@id/iv_back_Id"
                android:text="@string/bank_details"
                android:textColor="@color/profilehintcolor"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:text="@string/basic_details"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView

                android:id="@+id/cardProfileOne"
                android:layout_width="@dimen/_95sdp"
                android:layout_height="@dimen/_95sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_4sdp"
                android:paddingBottom="@dimen/_5sdp"
                app:cardCornerRadius="200dp">


                <ImageView
                    android:id="@+id/ivPiyushId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:src="@drawable/aman" />

            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center_horizontal"
                android:text="@string/yogendra_tiwari"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center_horizontal"
                android:text="@string/yogendratiwari54_gmail_com" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:text="@string/_91_84564_87453" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/bank_details"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/white"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/holder_name"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_minus6sdp"
                android:background="@drawable/bankdetailsshap"
                android:elevation="@dimen/_10sdp"
                android:hint="@string/enter_holder_name"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:singleLine="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/account_number"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_minus6sdp"
                android:background="@drawable/bankdetailsshap"
                android:elevation="@dimen/_10sdp"
                android:hint="@string/enter_your_account_number"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:singleLine="true"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="@string/ifsc_code"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="@string/type"
                    android:textColor="@color/black" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_minus1sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bankdetailsshap"
                    android:elevation="@dimen/_10sdp"
                    android:hint="@string/enter_your_ifsc_code"
                    android:paddingHorizontal="@dimen/_6sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:textSize="12sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bankdetailsshap"
                    android:elevation="@dimen/_10sdp"
                    android:hint=" "
                    android:paddingHorizontal="@dimen/_6sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:textSize="12sp" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/branch"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_minus6sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bankdetailsshap"
                android:elevation="@dimen/_10sdp"
                android:hint="@string/enter_your_bank_branch"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:singleLine="true"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6sdp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/btn_Submit_Id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:background="@drawable/taxtshap"
                        android:backgroundTint="@color/EditProfileButtonColor"
                        android:elevation="@dimen/_10sdp"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

</LinearLayout>